BackEnd/RMEC-rm-service/src/main/java/com/example/demo/error/ProjectNotFound.java
package com.example.demo.error;

public class ProjectNotFound  extends RuntimeException{
	public ProjectNotFound(Long id) {
		super("project id:"+ id+"not found");
	}
}
